[FEAT] 약속 상세 뷰 구현

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,13 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.detail.DetailActivity">
 
-    <data>
-        <variable
-            name="detailData"
-            type="org.seemeet.seemeet.data.local.NotificationDoneData" />
-
-    </data>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_detail_top_bar"
         android:layout_width="match_parent"
@@ -27,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
-            android:text="@string/friend_add"
+            android:text="2022년 11월 6일 일요일"
             android:textColor="@color/white"
             android:textSize="18sp"
             android:layout_marginTop="42dp"
@@ -46,4 +39,168 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tv_detail_day" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/tv_detail_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/spoqa_han_sans_neo_bold"
+        android:text="대방어 데이"
+        android:textColor="@color/gray06"
+        android:textSize="22sp"
+        android:layout_marginTop="26dp"
+        android:layout_marginStart="15dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cl_detail_top_bar" />
+
+    <TextView
+        android:id="@+id/tv_detail_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/din_pro_regular"
+        android:text="오전 11:00 - 오후 2:00"
+        android:textColor="@color/gray06"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
+        app:layout_constraintTop_toBottomOf="@id/tv_detail_title" />
+
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/cg_detail_friend_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        app:layout_constraintStart_toStartOf="@+id/tv_detail_time"
+        app:layout_constraintTop_toBottomOf="@id/tv_detail_time" >
+    </com.google.android.material.chip.ChipGroup>
+
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="24dp"
+        android:background="@color/gray02"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cg_detail_friend_list" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_detail_letter"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="328:255"
+        android:background="@drawable/bg_receive_content_card"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="20dp"
+        android:paddingBottom="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/divider4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" >
+
+        <TextView
+            android:id="@+id/tv_recieve_letter_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:layout_marginStart="25dp"
+            app:layout_constraintTop_toTopOf="@id/cl_detail_letter"
+            app:layout_constraintStart_toStartOf="@id/cl_detail_letter"
+            android:fontFamily="@font/spoqa_han_sans_neo_bold"
+            android:textSize="14sp"
+            android:textColor="@color/gray06"
+            android:text="가나다라마바사아자차가나다라마바사아자차"/>
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@id/tv_recieve_letter_title"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:overScrollMode="never"
+            android:scrollbars="none"
+            android:fadeScrollbars="false"
+            android:fillViewport="true"
+            android:orientation="vertical"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="50dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="10dp"
+                android:fontFamily="@font/spoqa_han_sans_neo_regular"
+                android:textSize="14sp"
+                android:lineSpacingExtra="10sp"
+                android:textColor="@color/gray06"
+                android:text="야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들아 대방어먹자야그들"/>
+
+        </androidx.core.widget.NestedScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/tv_detail_host"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp"
+        android:fontFamily="@font/spoqa_han_sans_neo_bold"
+        android:text="약속 주최자"
+        android:textColor="@color/gray04"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/cl_detail_letter"
+        app:layout_constraintTop_toBottomOf="@id/cl_detail_letter" />
+
+    <TextView
+        android:id="@+id/tv_detail_host_divider"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="9dp"
+        android:fontFamily="@font/spoqa_han_sans_neo_bold"
+        android:text="|"
+        android:textColor="@color/gray04"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_host"
+        app:layout_constraintStart_toEndOf="@+id/tv_detail_host"
+        app:layout_constraintTop_toTopOf="@+id/tv_detail_host" />
+
+
+    <TextView
+        android:id="@+id/tv_detail_host_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:fontFamily="@font/spoqa_han_sans_neo_bold"
+        android:text="김준희"
+        android:textColor="@color/gray06"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_host_divider"
+        app:layout_constraintStart_toEndOf="@+id/tv_detail_host_divider"
+        app:layout_constraintTop_toTopOf="@+id/tv_detail_host_divider" />
+
+    <View
+        android:id="@+id/divider5"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="59dp"
+        android:background="@color/gray02"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_detail_host" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_appointment_cancel"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/rectangle_gray04_10"
+        android:fontFamily="@font/spoqa_han_sans_neo_medium"
+        android:text="약속 삭제"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/divider5" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
