--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -40,7 +40,12 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">13sp</item>
         <item name="android:fontFamily">@font/spoqa_han_sans_neo_medium</item>
+    </style>
 
+    <style name="chipTextWhiteStyle2">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/spoqa_han_sans_neo_medium</item>
     </style>
 
     <style name="chipTextGrayStyle">
